Add node lookup tests

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "main": "src/index.js",
+    "main": "index.js",
     "type": "module",
     "scripts": {
-        "start": "npx nodemon src/index",
+        "start": "npx nodemon index",
         "test": "NODE_OPTIONS=--experimental-vm-modules npx jest"
     },
     "devDependencies": {
